--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //Power Menu
+    implementation "com.github.skydoves:powermenu:2.2.0"
+
 }
